# TransZero

./: .gitignore  LICENSE  README.md  Rendering.py  config.py  diagnose_model.py  env.yaml  environment.yml  hello_world.py  models.py  muzero.py  muzero_logger.py  optimal_path_finder.py  pyproject.toml  replay_buffer.py  self_play.py  shared_storage.py  trainer.py  transzero.ipynb  utils.py  wandb_download.py
db_utils/: run_db.sh  test_gh2.sh
games/: cartpole.py  cliff_walking.py  custom_grid.py  frozen_lake.py  gridworld.py  lunarlander.py  lunarlander_org.py
hyperparams/: mz_4x4_config.yaml  mz_lunar_config.yaml  tz_pll_4x4_config.yaml  tz_pll_lunar_cfg.yaml
networks/: abstract_network.py  double.py  double_network.py  double_network_new.py  fully_connected.py  mixed_network.py  muzero_network.py  resnet.py  stable_transformer.py  transformer.py
results/cartpole/2024-11-12--10-47-46/: events.out.tfevents.1731404904.DESKTOP-HT1NH47.11196.0  model.checkpoint  replay_buffer.pkl
rp_utils/: rp_run.sh
rp_utils/configs/: fully_alex.json  fully_alex_v2.json  res_alex.json  resnet_base.json  resnet_v2.json  trans_alex.json  trans_alex_vT2.json  trans_alex_vT2_smaller.json  trans_alex_vT3.json  trans_alex_vT4.json  trans_base.json  trans_v2.json  trans_v3.json
scripts/rp_utils/: rp_run.sh
scripts/rp_utils/configs/: PLL_base_1.3.json  PLL_base_2.0.json  PLL_base_2.1.json  PLL_base_2.2.json  (+75 more)
src/snippets/: params_new.py
src/trans_zero/: main.py  paths.py
value_utils/: node.py  observation_embeddings.py  policies.py  selection.py  utility_functions.py
(+32 files in other folders)
